# brainfuck-compiler

./: .gitignore  Cargo.toml  README.md  build.rs
profiles/: elf_32.json
src/: lex.rs  main.rs  profile.rs
