[package]
name = "bfc"
version = "0.2.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
once_cell = "1.17.0"
platform-dirs = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
simple_logger = "4.0.0"

[build-dependencies]
platform-dirs = "0.3.0"
